--- a/Device Access Management API/appsettings.json
+++ b/Device Access Management API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=TestDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "ThisIsVerySecretKey_AtLeast_32_Char",
+    "Issuer": "MyApp",
+    "Audience": "MyAppUsers"
   }
-}
+  }
